# exchange-simulator

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
agents/: __init__.py  base.py  market_maker.py  random_agent.py
bindings/: CMakeLists.txt  py_exchange.cpp  test_bindings.py
dashboard/: README.md
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.jsx  index.css
dashboard/server/: app.py
data/: __init__.py  backtest.py  databento.py  hawkes.py  replay.py  scenarios.py
engine/: CMakeLists.txt
engine/bench/: CMakeLists.txt  bench_matching.cpp  bench_order_book.cpp
engine/src/: matching_engine.cpp  matching_engine.hpp  memory_pool.hpp  multi_asset_engine.cpp  multi_asset_engine.hpp  order_book.cpp  order_book.hpp  types.hpp
engine/tests/: CMakeLists.txt  test_auction.cpp  test_iceberg.cpp  test_ioc_fok.cpp  test_matching_engine.cpp  test_memory_pool.cpp  test_multi_asset.cpp  test_order_book.cpp  test_pegged.cpp  test_stop_orders.cpp  test_types.cpp
features/: __init__.py  dataset.py  engine.py  labels.py
gateway/: __init__.py  __main__.py  fix_gateway.py  fix_parser.py  fix_session.py
rl/: __init__.py  evaluate.py  self_play.py  self_play_env.py  trading_env.py  train_ppo.py
rl/analysis/: __init__.py  convergence.py  elo.py  tournament.py  visualize.py
simulation/: __init__.py  loop.py
tests/: test_agents.py  test_convergence.py  test_data_gen.py  test_features.py  test_fix_gateway.py  test_market_maker.py  test_multi_asset.py  test_replay.py  test_rl_env.py  test_self_play.py
(+6 files in other folders)
